--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -1,7 +1,5 @@
 server:
   port: 8001
-
-
 spring:
   application:
     name: cloud-payment-service
@@ -15,3 +13,11 @@ spring:
 mybatis:
   mapperLocations: classpath:mapper/*Dao.xml
   type-aliases-package: com.atguigu.springcloud.entities
+eureka:
+  client:
+    # 是否从 EurekaServer 抓取已有的注册信息，默认为true。单点无所谓，集群必须设置为true 才能配合ribbon 使用负载均衡
+    register-with-eureka: true
+    # 是否将自己注册到 EurekaServer 默认为true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:7001/eureka
