--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,9 @@
 
   <modules>
     <module>cloud-provider-payment8001</module>
+    <module>cloud-consumer-order80</module>
+    <module>cloud-api-common</module>
+    <module>cloud-eureka-server7001</module>
   </modules>
 
 
@@ -26,6 +29,7 @@
     <mysql.version>5.1.47</mysql.version>
     <druid.version>1.1.16</druid.version>
     <mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>
+    <hutool-all.version>5.1.0</hutool-all.version>
   </properties>
 
   <!-- dependencyManagement 子模块继承之后，提供作用：锁定版本+子modlue不用写groupId和version,最顶层的父POM 才会出现  -->
