--- a/cloud-consumer-order80/src/main/resources/application.yml
+++ b/cloud-consumer-order80/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 80
 spring:
   application:
-    name: 80
+    name: cloud-order-service
 
 eureka:
   client:
@@ -11,4 +11,5 @@ eureka:
     # 是否将自己注册到 EurekaServer 默认为true
     fetch-registry: true
     service-url:
-      defaultZone: http://localhost:7001/eureka
+      #defaultZone: http://localhost:7001/eureka
+      defaultZone: http://eureka7002.com:7002/eureka,http://eureka7001.com:7001/eureka
