--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,9 @@
     <module>cloud-consumer-order80</module>
     <module>cloud-api-common</module>
     <module>cloud-eureka-server7001</module>
-      <module>cloud-eureka-server7002</module>
+    <module>cloud-eureka-server7002</module>
     <module>cloud-provider-payment8002</module>
+    <module>cloud-provider-payment8004</module>
   </modules>
 
 
@@ -32,6 +33,7 @@
     <druid.version>1.1.16</druid.version>
     <mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>
     <hutool-all.version>5.1.0</hutool-all.version>
+    <project.version>1.0-SNAPSHOT</project.version>
   </properties>
 
   <!-- dependencyManagement 子模块继承之后，提供作用：锁定版本+子modlue不用写groupId和version,最顶层的父POM 才会出现  -->
